--- a/client/src/pages/MyResume.scss
+++ b/client/src/pages/MyResume.scss
@@ -4,13 +4,52 @@
   justify-content: center;
   border: 1px dashed white;
   border-radius: 20px;
-  border-radius: 20px;
   width: 80%;
   height: 75%;
   padding: 1rem;
+  overflow: auto;
 
-  .Resume-Text {
+  .Resume-container {
     padding: 1rem;
+    height: 100%;
+
+    h1 {
+      text-align: center;
+    }
+
+    .Resume-row {
+      display: flex;
+      justify-content: space-around;
+      border: 1px solid white;
+
+      .Resume-Profile,
+      .Resume-Education,
+      .Resume-Certificate,
+      .Resume-Experience {
+        padding: 0.5rem;
+      }
+
+      .Resume-Profile {
+        width: 70%;
+      }
+
+      .Resume-Education {
+        width: 30%;
+      }
+
+      .Resume-Certificate {
+        width: 30%;
+      }
+
+      .Resume-Experience {
+        width: 70%;
+      }
+    }
+
+    .Resume-Download {
+      width: 100%;
+      text-align: center;
+    }
   }
 }
 
@@ -20,26 +59,46 @@
   .Resume {
     display: flex;
     flex-direction: column;
-    text-align: center;
-    background: #f1f1e6d5;
-    color: black;
+    text-align: left;
+    border: 1px dashed white;
     border-radius: 20px;
     width: 80%;
     height: 70%;
 
-    .Resume-Logo {
-      width: 100px;
-      height: 100px;
-      padding: 0.5rem;
-      border-radius: 50%;
-      border: 1px solid white;
-    }
-
-    .Resume-Text {
-      padding: 0.5rem;
+    .Resume-container {
+      padding: 0rem;
 
       h1 {
         font-size: 1.5rem;
+      }
+
+      .Resume-row {
+        display: flex;
+        border: 1px solid transparent;
+        flex-wrap: wrap;
+
+        .Resume-Profile,
+        .Resume-Education,
+        .Resume-Certificate,
+        .Resume-Experience {
+          padding: 0rem;
+        }
+
+        .Resume-Profile {
+          width: 100%;
+        }
+
+        .Resume-Education {
+          width: 100%;
+        }
+
+        .Resume-Certificate {
+          width: 100%;
+        }
+
+        .Resume-Experience {
+          width: 100%;
+        }
       }
     }
   }
