--- a/client/src/pages/AboutUs.scss
+++ b/client/src/pages/AboutUs.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px dashed white;
+  // border: 1px dashed white;
   border-radius: 20px;
   width: 80%;
   height: 75%;
@@ -13,15 +13,18 @@
     height: 230px;
     border-radius: 50%;
     padding: 1rem;
-    border: 1px dashed white;
+    border: 1px solid white;
   }
 
   .About-Text {
     padding: 1rem;
-    text-align: center;
 
     h1 {
       background: #1c495f;
+    }
+
+    p {
+      text-indent: 10%;
     }
   }
 }
@@ -32,7 +35,6 @@
   .About {
     display: flex;
     flex-direction: column;
-    text-align: center;
     width: 80%;
     height: 70%;
 
