--- a/client/src/pages/ContactUs.scss
+++ b/client/src/pages/ContactUs.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px dashed white;
+  // border: 1px dashed white;
   border-radius: 20px;
   border-radius: 20px;
   width: 80%;
@@ -14,7 +14,7 @@
     height: 230px;
     border-radius: 50%;
     padding: 1rem;
-    border: 1px dashed white;
+    border: 1px solid white;
   }
 
   .Contact-Text {
