--- a/client/src/pages/MyResume.scss
+++ b/client/src/pages/MyResume.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px dashed white;
+  // border: 1px dashed white;
   border-radius: 20px;
   width: 80%;
   height: 75%;
@@ -203,7 +203,7 @@
     display: flex;
     flex-direction: column;
     text-align: left;
-    border: 1px dashed white;
+    // border: 1px dashed white;
     border-radius: 20px;
     width: 80%;
     height: 70%;
