--- a/client/src/pages/AboutUs.scss
+++ b/client/src/pages/AboutUs.scss
@@ -1,31 +1,45 @@
 .About {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
   // border: 1px dashed white;
   border-radius: 20px;
-  width: 80%;
-  height: 75%;
+  width: 90%;
+  // height: 75%;
   padding: 1rem;
+  overflow-y: scroll;
+  overflow-x: hidden;
 
-  .About-Logo {
-    width: 230px;
-    height: 230px;
-    border-radius: 50%;
+  .About-container {
     padding: 1rem;
-    border: 1px solid white;
-  }
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-  .About-Text {
-    padding: 1rem;
-
-    h1 {
-      background: #1c495f;
+    .About-Logo {
+      width: 230px;
+      height: 230px;
+      border-radius: 50%;
+      padding: 1rem;
+      border: 5px solid black;
+      box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     }
 
-    p {
-      text-indent: 10%;
+    .About-Text {
+      padding: 1rem;
+
+      h1 {
+        background: rgb(255 255 255 / 49%);
+        border-radius: 25px;
+        padding: 0rem 0.5rem;
+        box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+        text-align: center;
+      }
+
+      p {
+        text-indent: 10%;
+      }
     }
+
   }
 }
 
@@ -33,23 +47,29 @@
 // Media query for small devices (mobile)
 @media only screen and (max-width: 430px) {
   .About {
-    display: flex;
-    flex-direction: column;
+
     width: 80%;
     height: 70%;
 
-    .About-Logo {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-    }
+    .About-container {
+      display: flex;
+      flex-direction: column;
 
-    .About-Text {
-      padding: 0.5rem;
+      .About-Logo {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
 
-      h1 {
-        font-size: 1.5rem;
       }
+
+      .About-Text {
+        padding: 0.5rem;
+
+        h1 {
+          font-size: 1.5rem;
+        }
+      }
+
     }
   }
 }
