--- a/client/src/pages/Home.scss
+++ b/client/src/pages/Home.scss
@@ -9,15 +9,16 @@
     height: 220px;
     padding: 1rem;
     border-radius: 50%;
-    border: 1px solid white;
+    border: 5px solid black;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   }
 
   .Home-Text {
     padding: 1rem;
 
     p {
-      color: #E79C25;
       font-weight: bold;
+      font-size: large;
     }
   }
 }
@@ -32,15 +33,14 @@
     height: 100vh;
 
     .Home-Logo {
-      width: 100px;
-      height: 100px;
-      padding: 0.5rem;
+      width: 150px;
+      height: 150px;
+      padding: 1rem;
       border-radius: 50%;
-      border: 1px solid white;
     }
 
     .Home-Text {
-      padding: 0.5rem;
+      padding: 1rem;
 
       h1 {
         font-size: 1.5rem;
