--- a/client/src/pages/ContactUs.scss
+++ b/client/src/pages/ContactUs.scss
@@ -1,3 +1,5 @@
+@use './../variables' as *;
+
 .Contact {
   display: flex;
   align-items: center;
@@ -15,7 +17,7 @@
     border-radius: 50%;
     padding: 1rem;
     border: 5px solid black;
-    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    box-shadow: $box-shadow-logo;
   }
 
   .Contact-Text {
@@ -26,10 +28,10 @@
 
     h1 {
       margin-bottom: 2rem;
-      background: rgb(255 255 255 / 49%);
-      border-radius: 25px;
+      background: $bg-color;
+      border-radius: 15px;
       padding: 0rem 0.5rem;
-      box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+      box-shadow: $box-shadow;
 
     }
 
@@ -57,7 +59,8 @@
         &:hover {
           background-color: #ffffff51;
           color: #A6CAEA;
-          border-radius: 20px;
+          border-radius: 10px;
+          box-shadow: $box-shadow-logo;
         }
 
         i {
