--- a/client/src/pages/MyResume.scss
+++ b/client/src/pages/MyResume.scss
@@ -1,3 +1,5 @@
+@use './../variables' as *;
+
 .Resume {
   display: flex;
   align-items: center;
@@ -19,8 +21,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: rgb(255 255 255 / 49%);
-      border-radius: 50px;
+      background: $bg-color;
+      box-shadow: $box-shadow;
+      border-radius: 15px;
 
       img {
         width: 55px;
@@ -37,8 +40,9 @@
       overflow: hidden;
 
       h3 {
-        background: rgb(255 255 255 / 49%);
-        border-radius: 20px;
+        background: $bg-color;
+        box-shadow: $box-shadow;
+        border-radius: 6px;
         padding-left: 0.5rem;
       }
 
@@ -83,8 +87,9 @@
       justify-content: space-around;
 
       h3 {
-        background: rgb(255 255 255 / 49%);
-        border-radius: 20px;
+        background: $bg-color;
+        box-shadow: $box-shadow;
+        border-radius: 6px;
         padding-left: 0.5rem;
       }
 
@@ -134,14 +139,16 @@
         text-indent: 15px;
         background-color: transparent;
         border: 1px solid black;
-        color: black;
+        color: $text-color;
         margin: 1rem 2rem;
         font-weight: bolder;
+        box-shadow: $box-shadow-logo;
+
 
       }
 
       .Button-Download:hover {
-        color: black;
+        color: $text-color;
         font-weight: bolder;
         border: 1px solid black;
       }
