--- a/client/src/pages/MyResume.scss
+++ b/client/src/pages/MyResume.scss
@@ -1,4 +1,4 @@
-@use './../variables' as *;
+@use "./../variables" as *;
 
 .Resume {
   display: flex;
@@ -48,7 +48,7 @@
 
       .Resume-Skills-Container {
         display: flex;
-        animation: swipe 50000ms linear infinite;
+        animation: swipe 10000ms linear infinite;
 
         .Resume-Skills-Content {
           margin: 0 0.6rem;
@@ -143,8 +143,6 @@
         margin: 1rem 2rem;
         font-weight: bolder;
         box-shadow: $box-shadow-logo;
-
-
       }
 
       .Button-Download:hover {
@@ -155,7 +153,7 @@
 
       .Button-Download:before,
       .Button-Download:after {
-        content: ' ';
+        content: " ";
         display: block;
         position: absolute;
         left: 15px;
@@ -196,7 +194,6 @@
 
       /* keyframes for the download icon anim */
       @keyframes downloadArrow {
-
         /* 0% and 0.001% keyframes used as a hackish way of having the button frozen on a nice looking frame by default */
         0% {
           margin-top: -7px;
@@ -220,7 +217,6 @@
     }
   }
 }
-
 
 // Media query for small devices (mobile)
 @media only screen and (max-width: 430px) {
